package progetto.gioco.engine.manager;

public abstract class BaseManager {
    public abstract void init();
    public abstract void reset();
}
