package progetto.gioco.engine.manager;

public interface Startable {
    public void start();
    public void stop();
    public boolean isRunning();
}
