package progetto.gioco.engine.model;

public interface Identifiable {
    public String getId();
}
